--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-fastapi>=0.68.0
-uvicorn>=0.15.0
-httpx>=0.24.0
-google-transit>=0.0.4
-pydantic>=2.0.0 
+fastapi==0.109.0
+uvicorn==0.27.0
+httpx==0.26.0
+google-transit==0.0.4
+pydantic==2.6.0
+pillow==10.2.0  # Required for LED matrix image handling
+rpi-gpio==0.7.1  # Required for LED matrix GPIO access 
