--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ pillow==10.2.0  # Required for LED matrix image handling
 rpi-gpio==0.7.1  # Required for LED matrix GPIO access
 pylint==3.0.3    # Required for code linting
 python-dotenv==1.0.0  # Required for loading environment variables
-rpi-rgb-led-matrix @ git+https://github.com/hzeller/rpi-rgb-led-matrix.git#subdirectory=bindings/python
+rgbmatrix @ git+https://github.com/hzeller/rpi-rgb-led-matrix.git#subdirectory=bindings/python
