--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - ./:/app
     extra_hosts:
-      - "mother.local:192.168.68.68"
+      - "server.local:192.168.68.68"
     # Uncomment and set if you need to expose ports
     # ports:
     #   - "8000:8000"
